# talisman-paper

./: Enrichment-Results-Analysis-gpt4.ipynb  Enrichment-Results-Analysis.ipynb  Enrichment-Results-Analysis__from_processed.ipynb  Preprocess.ipynb  README.md  Table1.ipynb  precion_recall_figs.ipynb  precision_recall_figs.ipynb  precision_recall_figs_oldtsv.ipynb  processed_tsv_issue.ipynb  pyproject.toml
conf/: enr-style.json
genesets/: HALLMARK_HEDGEHOG_SIGNALING.json  canonical-glycolysis-gocam.yaml  go-reg-autophagy-pkra.yaml  hydrolase-3-2-1.yaml  ndex-10.18119-N95K6G.cx  progeria.yaml  reg-presyn-mem-pot.yaml  tf-downreg-colorectal.yaml
genesets/candida/: candida-hyphal-growth.yaml
genesets/human/: HALLMARK_INTERFERON_GAMMA_RESPONSE.json  T-cell-proliferation.yaml  endocytosis.yaml  go-postsynapse-calcium.yaml  ig-receptor-binding-2022.yaml  molecular-sequestering.yaml
genesets/yeast/: yeast-autophagy-peroxisome.yaml  yeast-endocytosis.yaml  yeast-exec-phase-apop.yaml  yeast-meiosisI.yaml  yeast-peroxisome-org.yaml  yeast-resp-hypox.yaml
genesets/zebrafish/: zebrafish-canonical-glyc.yaml  zebrafish-exec-phase-apop.yaml  zebrafish-fin-morphogenesis.yaml  zebrafish-heart-jogging.yaml  zebrafish-meiosisI.yaml  zebrafish-notch-ref.yaml  zebrafish-notch.yaml  zebrafish-peroxisome-org.yaml
results/: yeast-enrichment-summary-2.yaml  zebrafish-enrichment-summary-2.yaml
results/closure/: NA_None_EDS-0.txt  NA_None_EDS-1.txt  NA_None_FA-0.txt  NA_None_FA-1.txt  NA_None_HALLMARK_ADIPOGENESIS-0.txt  NA_None_HALLMARK_ADIPOGENESIS-1.txt  (+1989 more)
(+158 files in other folders)
