[tool.poetry]
name = "enrichgpt-results"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "enrichgpt_results"}]

[tool.poetry.dependencies]
python = "^3.10"
ontogpt = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
